<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [
    <!ENTITY appname "Morning Diary">
    <!ENTITY author "D3STRO">
    <!ENTITY version "1.0">
    ]>
<resources>
    <string name="app_name">&appname;</string>
    <string name="app_version">&version;</string>
    <string name="app_name_full">&appname; &version;</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">Have a great day!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_day_view">Day View</string>
    <string name="menu_settings">Settings</string>
    <string name="todays_tasks">Today\'s Tasks</string>
    <string name="splashscreen">SplashScreen</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="previous">Previous</string>
    <string name="no_tasks">No Tasks</string>
    <string name="save">Save</string>
    <string name="loading">Loading..</string>
</resources>