<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.newTask.NewTask">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/title_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/task_title"
        android:textColorHint="@color/textColor"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/title_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/textColor" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/desc_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/task_description"
        android:textColorHint="@color/textColor"
        app:errorEnabled="true"
        app:hintTextColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/desc_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="50"
            android:textColor="@color/textColor" />

    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/date_sel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/desc_input_layout"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        >
        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_today"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:layout_gravity="center"
            android:checked="true"
            android:layout_marginEnd="24dp"
            android:text="@string/today"
            />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/radio_tomorrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/textColor"
            android:layout_marginStart="24dp"
            android:text="@string/tomorrow"
            />

    </RadioGroup>

    <TimePicker
        android:id="@+id/time_sel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_margin="16dp"
        android:headerBackground="@color/background"
        android:background="@color/background"
        android:numbersBackgroundColor="@color/background"
        android:numbersInnerTextColor="@color/textColor"
        android:numbersTextColor="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_sel"
        app:layout_constraintBottom_toTopOf="@id/dbttn_cancel"
        tools:targetApi="m" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dbttn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/colorPrimary"
        android:onClick="onClick"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dbttn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@color/colorPrimary"
        android:onClick="onClick"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dbttn_ok"
        />

</androidx.constraintlayout.widget.ConstraintLayout>