<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.home.HomeFragment">

    <ImageButton
        android:id="@+id/bttn_prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_prev"
        android:background="@color/background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/task_title_home"
        app:layout_constraintBottom_toTopOf="@+id/today_text"
        app:layout_constraintTop_toTopOf="@+id/today_text"
        android:contentDescription="@string/previous" />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/task_title_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/todays_tasks"
        android:textColor="@color/textColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/bttn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/icon_next"
        android:background="@color/background"
        app:layout_constraintStart_toEndOf="@+id/task_title_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/today_text"
        app:layout_constraintTop_toTopOf="@+id/today_text"
        android:contentDescription="@string/previous" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/today_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/textColor"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/task_title_home"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/no_task_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_tasks"
        android:textSize="24sp"
        android:textColor="@color/textColor"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/today_text"
        app:layout_constraintBottom_toTopOf="@id/save_change_layout"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tasklist"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="15dp"
        app:layout_constraintBottom_toTopOf="@id/save_change_layout"
        app:layout_constraintTop_toBottomOf="@+id/today_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/save_change_layout"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bttn_cancel_change"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight=".5"
            android:text="@string/cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bttn_save_change"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight=".5"
            android:text="@string/save" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>